welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:45: error: not found: value stop
	stop;
        ^